# internal/db/models.go
@@ -10,8 +10,10 @@ import (
 
 type User struct {
 	ID        int64
+	Username  string
 	Email     string
 	Password  string
+	Role      string
 	CreatedAt time.Time
 	UpdatedAt time.Time
 }
